--- a/style.css
+++ b/style.css
@@ -17,6 +17,9 @@ body {
 }
 
 .card-img-top {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-align: center;
     border-radius: 10px;
 }
